@@ -1,5 +1,6 @@
 1.1beta10:
 
+ - check repeated messages
  - make grid 0,20,40,60,80,100 in graphs
  - support of PostgreSQL
  - http://www.zabbix.com/forum/showthread.php?t=2736
