@@ -119,4 +119,6 @@ int	RUN_COMMAND(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 int	EXECUTE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 int	EXECUTE_STR(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 
+int	WEB_GETPAGE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
+
 #endif
